Implementation for private user chats
